k8s/hc/home-assistant/home-assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-deployment
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: home-assistant-storage
      volumes:
        - name: home-assistant-storage
          persistentVolumeClaim:
            claimName: home-assistant-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
  type: Cluster
