k8s/hc/home-assistant/home-assistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
# Name the Ingress resource
  name: home-assistant-ingress
  annotations:
    # Use Traefik as the Ingress controller
    kubernetes.io/ingress.class: traefik
    # Add Cert-Manager SSL certificates as the name of the ClusterIssuer resource
    cert-manager.io/cluster-issuer: letsencrypt-certificate
spec:
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName: cert-manager.letsencrypt.key.tls
      hosts:
        # Replace with your domain name
        - ha.dalvarez.co.uk
  # Create Ingress routing rules
  rules:
  # Replace with your domain name
  - host: ha.dalvarez.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           # Name of your service resource
            name: home-assistant-service
            port:
             # Port number to forward traffic to
              number: 8123
